# logrotate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
tap/Formula/: logrotate.rb
tests/: unittests.rs
